# Clio

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml
clio/: CMakeLists.txt  package.xml
clio/cmake/: clioConfig.cmake.in
clio/include/clio/: agglomerative_clustering.h  cluster.h  clustering_workspace.h  edge_selector.h  ib_edge_selector.h  ib_utils.h  object_update_functor.h  probability_utilities.h  region_update_functor.h  scene_graph_types.h
clio/src/: agglomerative_clustering.cpp  clustering_workspace.cpp  ib_edge_selector.cpp  ib_utils.cpp  object_update_functor.cpp  probability_utilities.cpp  region_update_functor.cpp
clio/tests/: CMakeLists.txt  test_agglomerative_clustering.cpp  test_clustering_workspace.cpp  test_ib_edge_selector.cpp  test_object_update_functor.cpp  test_probability_utilities.cpp
clio/tests/include/clio_tests/: utilities.h
clio/tests/src/: utilities.cpp
clio_batch/: cluster_plotting.py  cluster_utilities.py  helpers.py  ib_cluster.py  information_metrics.py  object_cluster.py
clio_data_maker/: ply_viewer.py  rescale_bbox.py
clio_eval/: evaluate_dsg.py  evaluate_helpers.py  iou.py  scene_transforms.yaml  utils.py  visualize_objects.py  viz_scene.py
clio_eval/experiments/: evaluate_ablations.py  result_utils.py  run_3d_object_ablations.py
clio_ros/: CMakeLists.txt  README.md  package.xml
clio_ros/app/: clio_node.cpp  record_spot  run_place_ablations  task_server
clio_ros/config/: realsense.yaml  region_visualizer_config.yaml  ros_argument_params.yaml  task_colors.csv
clio_ros/config/datasets/: uh2_closed_set.yaml
clio_ros/config/pipelines/: uh2_closed_set.yaml
clio_ros/config/realsense/: pipeline.yaml  realsense.yaml  realsense_fine.yaml
clio_ros/config/replica/: replica.yaml
clio_ros/config/segmentation/: large_clip.yaml  open_clip.yaml  small_clip.yaml
clio_ros/config/visualizer/: clustering_visualizer.yaml  default.yaml
clio_ros/include/clio_ros/: category_legend.h  clio_pipeline.h  colormap_legend.h  llm_frontend.h  task_information.h
clio_ros/launch/: clio.launch  clustering_visualizer.launch  realsense.launch  replica.launch  spot_multi.launch  uhumans2.launch
clio_ros/rviz/: clustering_visualizer.rviz  default.rviz  realsense.rviz  spot_multi.rviz  uhumans2.rviz
clio_ros/src/: category_legend.cpp  clio_pipeline.cpp  colormap_legend.cpp  llm_frontend.cpp  task_information.cpp
hydra_llm/: CMakeLists.txt  package.xml
hydra_llm/include/hydra_llm/: agglomerative_clustering.h  clip_types.h  cluster.h  clustering.h  clustering_utilities.h  clustering_workspace.h  common.h  edge_selector.h  embedding_distances.h  embedding_group.h  embedding_norms.h  greedy_clustering.h  ib_edge_selector.h  ib_utils.h  merge_utilities.h  no_clustering.h  object_update_functor.h  passthrough_clustering.h  places_clustering.h  probability_utilities.h  region_update_functor.h  requery_edge_selector.h  task_embeddings.h  view_database.h
hydra_llm/src/: agglomerative_clustering.cpp  clustering.cpp  clustering_utilities.cpp  clustering_workspace.cpp  embedding_distances.cpp  embedding_group.cpp  embedding_norms.cpp  greedy_clustering.cpp  ib_edge_selector.cpp  ib_utils.cpp  merge_utilities.cpp  no_clustering.cpp  object_update_functor.cpp  passthrough_clustering.cpp  places_clustering.cpp  probability_utilities.cpp  region_update_functor.cpp  requery_edge_selector.cpp  task_embeddings.cpp  view_database.cpp
hydra_llm/tests/: CMakeLists.txt  main.cpp  test_agglomerative_clustering.cpp  test_clustering_workspace.cpp  test_embedding_distances.cpp  test_ib_edge_selector.cpp  test_object_update_functor.cpp  test_probability_utilities.cpp
hydra_llm/tests/include/hydra_llm_tests/: utilities.h
hydra_llm/tests/src/: utilities.cpp
hydra_llm_ros/: CMakeLists.txt  package.xml
hydra_llm_ros/app/: clustering_visualizer.cpp  generate_colormap  hydra_llm_node.cpp  hydra_llm_visualizer_node.cpp  legend_publisher  record_spot  run_place_ablations
hydra_llm_ros/config/: backend_config.yaml  clustering_visualizer.yaml  dev_visualizer_config.yaml  frontend_config.yaml  offline_visualizer.yaml  online_visualizer.yaml  realsense.yaml  realsense_fine.yaml  realsense_pipeline.yaml  realsense_relaxed.yaml  region_visualizer_config.yaml  replica.yaml  ros_argument_params.yaml  spot_multi.yaml  static_visualizer_config.yaml  task_visualizer_config.yaml  uhumans2.yaml  visualizer_config.yaml
hydra_llm_ros/config/hydra_visualizer/: buildings_layer.yaml  objects_layer.yaml  places_layer.yaml  rooms_layer.yaml  visualizer.yaml
hydra_llm_ros/include/hydra_llm_ros/: active_window_module.h  category_legend.h  colormap_legend.h  graph_wrappers.h  gt_publisher.h  hydra_llm_pipeline.h  interlayer_plugin.h  khronos_input_module.h  llm_frontend.h  llm_layer_color_functor.h  llm_layer_plugin.h  llm_places_visualizer.h  marker_tracker.h  node_filter.h  ros_embedding_group.h  ros_task_embeddings.h  task_information.h
hydra_llm_ros/launch/: clustering_visualizer.launch  hydra_llm.launch  hydra_llm_visualizer.launch  realsense.launch  replica.launch  spot_multi.launch  spot_static_tfs.xml  uhumans2.launch
hydra_llm_ros/rviz/: apartment.rviz  clustering_visualizer.rviz  cubicle.rviz  hydra_visualizer.rviz  llm_static_visualizer.rviz  office.rviz  realsense.rviz  region_visualizer.rviz  spot_multi.rviz  uhumans2.rviz
hydra_llm_ros/src/: active_window_module.cpp  category_legend.cpp  colormap_legend.cpp  graph_wrappers.cpp  gt_publisher.cpp  hydra_llm_pipeline.cpp  interlayer_plugin.cpp  khronos_input_module.cpp  llm_frontend.cpp  llm_layer_color_functor.cpp  llm_layer_plugin.cpp  llm_places_visualizer.cpp  marker_tracker.cpp  node_filter.cpp  places_visualizer.cpp  ros_embedding_group.cpp  ros_task_embeddings.cpp  task_information.cpp
include/hydra_llm/: places_clustering.h
install/: clio.rosinstall  hydra_llm.rosinstall
src/: places_clustering.cpp
test/: conftest.py  helpers.py  test_eval_utils.py  test_helpers.py  test_ib_cluster.py  test_information_metrics.py  test_obb.py
tests/: CMakeLists.txt
(+9 files in other folders)
