[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clio"
version = "0.0.1"
dependencies = [
  "click",
  "clip@git+https://github.com/openai/CLIP",
  "distinctipy",
  "matplotlib",
  "numpy==1.23.5",
  "open_clip_torch",
  "open3d>=0.17.0",
  "opencv-python",
  "pandas",
  "seaborn>=0.11.0",
  "spark_dsg@git+https://github.com/MIT-SPARK/Spark-DSG.git@clio",
  "tabulate",
  "torch==2.0.1",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["clio_eval", "clio_data_maker", "clio_batch"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*clip.clip:",
    "ignore:::.*pkg_resources:",
]
